Fix conditional for gatewayclassconfig address

--- a/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
+++ b/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
@@ -28,6 +28,8 @@ spec:
     address: {{ first .Values.externalServers.hosts }}
     {{- else if and (not .Values.externalServers.enabled) .Values.client.enabled }}
     address: $(HOST_IP)
+    {{- else if .Values.externalServers.enabled }} 
+    address: {{ first .Values.externalServers.hosts }}
     {{- else }}
     {{/*
       We have local network connectivity between deployments and the internal cluster, this
