Explicitly disable grpc_tls when not using encryption. (#1699)
In Consul 1.14, the grpc_tls port will be enabled by default
on servers. This explicitly disables the port if encryption
is not configured so that the defaults do not affect installations.


Co-authored-by: Nitya Dhanushkodi <nitya@hashicorp.com>

--- a/charts/consul/templates/server-config-configmap.yaml
+++ b/charts/consul/templates/server-config-configmap.yaml
@@ -29,8 +29,10 @@ data:
       "ports": {
         {{- if not .Values.global.tls.enabled }}
         "grpc": 8502,
+        "grpc_tls": -1,
         {{- end }}
         {{- if .Values.global.tls.enabled }}
+        "grpc": -1,
         "grpc_tls": 8502,
         {{- end }}
         "serf_lan": {{ .Values.server.ports.serflan.port }}
