Add comments from deployment to gatewayclassconfig

--- a/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
+++ b/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
@@ -29,6 +29,9 @@ spec:
     {{- else if and (not .Values.externalServers.enabled) .Values.client.enabled }}
     address: $(HOST_IP)
     {{- else if .Values.externalServers.enabled }} 
+    {{/*
+      "externalServers" specified and running in "agentless" mode, this will only work 0.5+
+    */}}
     address: {{ first .Values.externalServers.hosts }}
     {{- else }}
     {{/*
