Remaining helm values changes and cleanup (#1698)
* remove ConsulSidecarContainer from cli
* move global.imageEnvoy to apiGateway.imageEnvoy
* .client.snapshotAgent -> .server.snapshotAgent
* cli: remove InitCopyConsulContainer for mesh and terminating gateways

--- a/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
+++ b/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
@@ -37,7 +37,7 @@ spec:
   {{- end }}
   image:
     consulAPIGateway: {{ .Values.apiGateway.image }}
-    envoy: {{ .Values.global.imageEnvoy }}
+    envoy: {{ .Values.apiGateway.imageEnvoy }}
   {{- if .Values.apiGateway.managedGatewayClass.nodeSelector }}
   nodeSelector:
     {{ tpl .Values.apiGateway.managedGatewayClass.nodeSelector . | indent 4 | trim }}
